--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,5 @@ gunicorn==21.2.0
 # Утилиты для установки пакетов (рекомендуется)
 setuptools>=65.5.0
 wheel>=0.38.0
+django-jazzmin==3.0.1
+pillow==12.0.0
