--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ django-filter==25.2
 django-jazzmin==3.0.1
 escpos==2.0.0
 future==1.0.0
-gunicorn==23.0.0
 importlib_resources==6.5.2
 packaging==25.0
 pillow==12.0.0
@@ -29,3 +28,4 @@ setuptools>=65.5.0
 wheel>=0.38.0
 django-jazzmin==3.0.1
 pillow==12.0.0
+requests==2.32.5
